fix overflow with max dimensions

--- a/src/pretix/static/pretixpresale/scss/widget.scss
+++ b/src/pretix/static/pretixpresale/scss/widget.scss
@@ -807,6 +807,8 @@
     -moz-box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
     box-sizing: border-box;
     padding: 10px;
+    max-width: 90%;
+    max-height: 90%;
   }
   &.pretix-widget-lightbox-isloading .pretix-widget-lightbox-inner {
     position: absolute;
